--- a/Resources/css/index.css
+++ b/Resources/css/index.css
@@ -16,9 +16,11 @@ body {
   }
 
 .nav {
-    display: flex;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
     align-items: center;
     padding: var(--spacing-3) 0;
+    margin-left: .25em;
   }
   
   .navigation-items {
@@ -30,17 +32,24 @@ body {
   }
   
   .navigation-item {
-    margin: 0 15px;
+    margin: 0 1em;
   }
 
   .portrait {
     width: 100%;
-    height: min-content;
+    height: auto;
     flex-wrap: wrap;
     }
 
   .about-me-container {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-columns: 1fr 2fr;
+    grid-auto-rows: auto;
+  }
+
+  .about-me-text-container {
+    margin-left: .5em;
   }
 
   h2 {
@@ -64,8 +73,9 @@ body {
   .skills-container {
     display: flex;
     width: 100%;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
+    margin-left: .5em;
   }
 
 .skill {
@@ -93,7 +103,7 @@ label {
 textarea {
     color: #b6b6b6;
     display: flex;
-    width: 300px;
+    width: 10em;
 }
 
 input {
@@ -115,15 +125,31 @@ footer {
 
 @media only screen and (max-width: 600px) {
   .about-me-container {
+    display: flex;
     flex-direction: column;
+  }
+
+  .portrait {
+    margin: 0 1em;
   }
 
   img {
     width: min-content;
     height: auto;
+    justify-content: space-around;
+    margin: 0 0;
   }
 
   .contact-me {
     flex-direction: column;
   }
+
+  textarea {
+    width: 10em;
+  }
+
+  .email {
+    margin-right: .5em;
+  }
+
 }
